Rendering array field
Change-Id: Iceae98b69e6add7e8e89b05cb66e015bfcc845b4

--- a/src/ui_components/dumbComponents/field/field.scss
+++ b/src/ui_components/dumbComponents/field/field.scss
@@ -1,3 +1,38 @@
 xos-field {
   display: block;
+
+  .panel-heading {
+    font-weight: bold;
+  }
+
+  .draggable {
+    position: relative;
+    border: 1px dashed #aaa;
+    min-height: 20px;
+    list-style: none;
+    padding: 10px;
+
+    li {
+      width: 25%;
+      float: left;
+    }
+
+    .well {
+      margin: 10px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  
+  
+
+  .dndPlaceholder {
+    background-color: #ddd !important;
+    height: 40px;
+    /*width: 50px;*/
+    display: block;
+    margin: 10px 0;
+  }
 }
