--- a/dev/templates/field.dev.html
+++ b/dev/templates/field.dev.html
@@ -3,3 +3,5 @@
 <xos-field ng-model="vm.field3.model" name="vm.field3.name" field="vm.field3.field"></xos-field>
 <xos-field ng-model="vm.field4.model" name="vm.field4.name" field="vm.field4.field"></xos-field>
 <xos-field ng-model="vm.field5.model" name="vm.field5.name" field="vm.field5"></xos-field>
+<xos-field ng-model="vm.selectField.model" name="vm.selectField.name" field="vm.selectField"></xos-field>
+<xos-field ng-model="vm.arrayField.model" name="vm.arrayField.name" field="vm.arrayField"></xos-field>
